base for forwarding available/active Sensors
