# server/proto/humidityStorage.pb.go
@@ -96,7 +96,8 @@ type GetActiveSensorsRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	DeviceMAC *string `protobuf:"bytes,1,req,name=deviceMAC" json:"deviceMAC,omitempty"`
+	DeviceMAC        *string  `protobuf:"bytes,1,req,name=deviceMAC" json:"deviceMAC,omitempty"`
+	AvailableSensors []uint32 `protobuf:"varint,2,rep,name=availableSensors" json:"availableSensors,omitempty"`
 }
 
 func (x *GetActiveSensorsRequest) Reset() {
@@ -136,6 +137,13 @@ func (x *GetActiveSensorsRequest) GetDeviceMAC() string {
 		return *x.DeviceMAC
 	}
 	return ""
+}
+
+func (x *GetActiveSensorsRequest) GetAvailableSensors() []uint32 {
+	if x != nil {
+		return x.AvailableSensors
+	}
+	return nil
 }
 
 type GetActiveSensorsResponse struct {
@@ -238,27 +246,36 @@ var file_humidityStorage_proto_rawDesc = []byte{
 	0x74, 0x79, 0x12, 0x2c, 0x0a, 0x11, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x49, 0x6e,
 	0x50, 0x65, 0x72, 0x63, 0x65, 0x6e, 0x74, 0x18, 0x04, 0x20, 0x02, 0x28, 0x05, 0x52, 0x11, 0x68,
 	0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x49, 0x6e, 0x50, 0x65, 0x72, 0x63, 0x65, 0x6e, 0x74,
-	0x22, 0x37, 0x0a, 0x17, 0x47, 0x65, 0x74, 0x41, 0x63, 0x74, 0x69, 0x76, 0x65, 0x53, 0x65, 0x6e,
+	0x22, 0x63, 0x0a, 0x17, 0x47, 0x65, 0x74, 0x41, 0x63, 0x74, 0x69, 0x76, 0x65, 0x53, 0x65, 0x6e,
 	0x73, 0x6f, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1c, 0x0a, 0x09, 0x64,
 	0x65, 0x76, 0x69, 0x63, 0x65, 0x4d, 0x41, 0x43, 0x18, 0x01, 0x20, 0x02, 0x28, 0x09, 0x52, 0x09,
-	0x64, 0x65, 0x76, 0x69, 0x63, 0x65, 0x4d, 0x41, 0x43, 0x22, 0x34, 0x0a, 0x18, 0x47, 0x65, 0x74,
-	0x41, 0x63, 0x74, 0x69, 0x76, 0x65, 0x53, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73, 0x52, 0x65, 0x73,
-	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73,
-	0x18, 0x01, 0x20, 0x03, 0x28, 0x0d, 0x52, 0x07, 0x73, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73, 0x22,
-	0x14, 0x0a, 0x12, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79,
-	0x52, 0x65, 0x70, 0x6c, 0x79, 0x32, 0x69, 0x0a, 0x0f, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74,
-	0x79, 0x53, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x12, 0x56, 0x0a, 0x12, 0x73, 0x74, 0x6f, 0x72,
-	0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x12, 0x20,
-	0x2e, 0x73, 0x6d, 0x61, 0x72, 0x74, 0x5f, 0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72,
-	0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x1e, 0x2e, 0x73, 0x6d, 0x61, 0x72, 0x74, 0x5f, 0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74,
-	0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x70, 0x6c, 0x79,
-	0x42, 0x5a, 0x0a, 0x1e, 0x63, 0x6f, 0x6d, 0x2e, 0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2e,
-	0x72, 0x70, 0x69, 0x63, 0x6f, 0x6d, 0x6d, 0x75, 0x6e, 0x69, 0x63, 0x61, 0x74, 0x6f, 0x72, 0x5f,
-	0x76, 0x31, 0x5a, 0x38, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74,
-	0x6f, 0x62, 0x69, 0x61, 0x73, 0x6a, 0x75, 0x6e, 0x67, 0x6d, 0x61, 0x6e, 0x6e, 0x2f, 0x48, 0x69,
-	0x6d, 0x62, 0x65, 0x65, 0x72, 0x67, 0x61, 0x72, 0x74, 0x65, 0x6e, 0x5f, 0x52, 0x50, 0x69, 0x2f,
-	0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x64, 0x65, 0x76, 0x69, 0x63, 0x65, 0x4d, 0x41, 0x43, 0x12, 0x2a, 0x0a, 0x10, 0x61, 0x76, 0x61,
+	0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x53, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73, 0x18, 0x02, 0x20,
+	0x03, 0x28, 0x0d, 0x52, 0x10, 0x61, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x53, 0x65,
+	0x6e, 0x73, 0x6f, 0x72, 0x73, 0x22, 0x34, 0x0a, 0x18, 0x47, 0x65, 0x74, 0x41, 0x63, 0x74, 0x69,
+	0x76, 0x65, 0x53, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73, 0x18, 0x01, 0x20, 0x03,
+	0x28, 0x0d, 0x52, 0x07, 0x73, 0x65, 0x6e, 0x73, 0x6f, 0x72, 0x73, 0x22, 0x14, 0x0a, 0x12, 0x53,
+	0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x70, 0x6c,
+	0x79, 0x32, 0xc8, 0x01, 0x0a, 0x0f, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x53, 0x74,
+	0x6f, 0x72, 0x61, 0x67, 0x65, 0x12, 0x56, 0x0a, 0x12, 0x73, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75,
+	0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x12, 0x20, 0x2e, 0x73, 0x6d,
+	0x61, 0x72, 0x74, 0x5f, 0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75,
+	0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1e, 0x2e,
+	0x73, 0x6d, 0x61, 0x72, 0x74, 0x5f, 0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72, 0x65,
+	0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x5d, 0x0a,
+	0x19, 0x47, 0x65, 0x74, 0x41, 0x63, 0x74, 0x69, 0x76, 0x65, 0x53, 0x65, 0x6e, 0x73, 0x6f, 0x72,
+	0x73, 0x46, 0x6f, 0x72, 0x44, 0x65, 0x76, 0x69, 0x63, 0x65, 0x12, 0x20, 0x2e, 0x73, 0x6d, 0x61,
+	0x72, 0x74, 0x5f, 0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d,
+	0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1e, 0x2e, 0x73,
+	0x6d, 0x61, 0x72, 0x74, 0x5f, 0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48,
+	0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x42, 0x5a, 0x0a, 0x1e,
+	0x63, 0x6f, 0x6d, 0x2e, 0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2e, 0x72, 0x70, 0x69, 0x63,
+	0x6f, 0x6d, 0x6d, 0x75, 0x6e, 0x69, 0x63, 0x61, 0x74, 0x6f, 0x72, 0x5f, 0x76, 0x31, 0x5a, 0x38,
+	0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6f, 0x62, 0x69, 0x61,
+	0x73, 0x6a, 0x75, 0x6e, 0x67, 0x6d, 0x61, 0x6e, 0x6e, 0x2f, 0x48, 0x69, 0x6d, 0x62, 0x65, 0x65,
+	0x72, 0x67, 0x61, 0x72, 0x74, 0x65, 0x6e, 0x5f, 0x52, 0x50, 0x69, 0x2f, 0x73, 0x65, 0x72, 0x76,
+	0x65, 0x72, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
 }
 
 var (
@@ -282,9 +299,11 @@ var file_humidityStorage_proto_goTypes = []interface{}{
 }
 var file_humidityStorage_proto_depIdxs = []int32{
 	0, // 0: smart_home.HumidityStorage.storeHumidityEntry:input_type -> smart_home.StoreHumidityRequest
-	3, // 1: smart_home.HumidityStorage.storeHumidityEntry:output_type -> smart_home.StoreHumidityReply
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	0, // 1: smart_home.HumidityStorage.GetActiveSensorsForDevice:input_type -> smart_home.StoreHumidityRequest
+	3, // 2: smart_home.HumidityStorage.storeHumidityEntry:output_type -> smart_home.StoreHumidityReply
+	3, // 3: smart_home.HumidityStorage.GetActiveSensorsForDevice:output_type -> smart_home.StoreHumidityReply
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
